--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,89 @@
     </plugins>
   </build>
 
+  <profiles>
+    <profile>
+      <id>generate_qdsl</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-maven-plugin</artifactId>
+            <version>3.8.4</version>
+            <configuration>
+              <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+              <changeLogFile>${project.basedir}/src/test/resources/META-INF/db-changelog.xml</changeLogFile>
+              <url>jdbc:h2:${project.basedir}/target/tl_tables;AUTO_SERVER=TRUE</url>
+              <driver>org.h2.Driver</driver>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>update</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-maven-plugin</artifactId>
+            <version>4.2.2</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>export</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <jdbcDriver>org.h2.Driver</jdbcDriver>
+              <jdbcUrl>jdbc:h2:${project.basedir}/target/tl_tables;AUTO_SERVER=TRUE</jdbcUrl>
+              <packageName>org.everit.persistence.querydsl.dtoquery.test.schema</packageName>
+              <targetFolder>${project.basedir}/src/test/generated/java</targetFolder>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.4.200</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <dependencies>
     <dependency>
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-sql</artifactId>
       <version>4.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+      <version>3.8.4</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.200</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.everit.persistence</groupId>
+      <artifactId>org.everit.persistence.querydsl.support</artifactId>
+      <version>2.1.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
