--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.everit.persistence</groupId>
   <artifactId>org.everit.persistence.querydsl.dtoquery</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0-alpha1</version>
 
   <packaging>bundle</packaging>
 
