--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,12 @@
       <version>2.1.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.ow2.spec.ee</groupId>
+      <artifactId>ow2-annotation-1.1-spec</artifactId>
+      <version>1.0.5</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
